--- a/index.html
+++ b/index.html
@@ -90,3 +90,19 @@
 </body>
 
 </html>
+
+<!--
+basic commands to upload in gitHub:
+>git add .
+>git commit -m ""
+>git push origin main
+
+TO PRINT ALL THE COMMITS IS:
+>git log
+TO PRINT THE COMMITS MORE UNDERTANDABLE
+>git log --pretty=oneline
+
+
+
+
+-->
