--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <!--
 basic commands to upload in gitHub:
 >git add .
->git commit -m ""
+>git commit -m "type her the message"
 >git push origin main
 
 TO PRINT ALL THE COMMITS IS:
