--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <h1 class="site-heading text-center text-faded d-none d-lg-block">
-            <span class="site-heading-upper text-primary mb-3">Git</span>
-            <span class="site-heading-lower">Learning Git</span>
+            <span class="site-heading-upper text-primary mb-3">SECOND MISTAKE</span>
+            <span class="site-heading-lower">OUR FIRST MISTAKE</span>
         </h1>
     </header>
     <!-- Navigation-->
@@ -90,3 +90,8 @@
 </body>
 
 </html>
+
+<!--
+    TO UNDO OR REMOVE ANY FILE IN THE STAGE
+>git reset HEAD index.html
+-->
