commiting our third mistake, we left theother in place

--- a/index.html
+++ b/index.html
@@ -94,4 +94,15 @@
 <!--
     TO UNDO OR REMOVE ANY FILE IN THE STAGE
 >git reset HEAD index.html
+
+TO REMOVE A MISTAKE 'COMMITED'. HEAD~1 refers to the last commit before 
+>git reset --soft HEAD~1
+
+TO SET THE FILE UNSTAGED
+>git reset HEAD index.html
+
+
+UNDOING A PUSHED CHANGE IN THE REPOSITORY
+>
+
 -->
