working with git diff code

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
     <footer class="footer text-faded text-center py-5">
         <div class="container">
-            <p class="m-0 small">Copyright &copy; Your Website 2023</p>
+            <p class="m-0 small">Copyright by Moisés Parra &copy; Your Website 2023</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
@@ -103,6 +103,11 @@ TO SET THE FILE UNSTAGED
 
 
 UNDOING A PUSHED CHANGE IN THE REPOSITORY
+THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
 >git revert HEAD
+
+
+//TO SEE THE CHANGES DIFFERENCES IN EVERY SAVINGS TO AVOID WRONGS
+>git diff
 
 -->
