studying fetch and fetch and merge changes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <h1 class="site-heading text-center text-faded d-none d-lg-block">
-            <span class="site-heading-upper text-primary mb-3">SECOND MISTAKE</span>
-            <span class="site-heading-lower">OUR FIRST MISTAKE</span>
+            <span class="site-heading-upper text-primary mb-3">Lesson 6</span>
+            <span class="site-heading-lower">Step 1: Fetch and Merge Changes</span>
         </h1>
     </header>
     <!-- Navigation-->
