Fetch and Merge Changes

--- a/index.html
+++ b/index.html
@@ -111,3 +111,13 @@ THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
 >git diff
 
 -->
+
+<!--
+    //LESSON 06 Lesson 6, Step 1: Fetch and Merge Changes
+
+    //To ask for the remote changes is with the following code:
+    >git fetch
+    //THEN:
+    //IN THIS CASE THE ORIGIN IS THE BRANCH 06
+    >git merge origin/06
+-->
