notes about 'pull'

--- a/index.html
+++ b/index.html
@@ -121,3 +121,11 @@ THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
     //IN THIS CASE THE ORIGIN IS THE BRANCH 06
     >git merge origin/06
 -->
+
+<!--
+    //LESSON 06 Lesson 6, Step 2: Git Pull
+
+    //This combine fetch and merge, the code is the following. NOTE: IN THIS EXAMPLE '06' IS THE BRANCH WHERE WE ARE WORKING
+    >git pull origin 06
+   
+-->
