Change the title color

--- a/index.html
+++ b/index.html
@@ -129,3 +129,8 @@ THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
     >git pull origin 06
    
 -->
+
+<!--LESSON 06 Step 3: Avoid Rejected Push Requests
+    
+
+-->
