--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <h1 class="site-heading text-center text-faded d-none d-lg-block">
             <span class="site-heading-upper text-primary mb-3">Lesson 6</span>
-            <span class="site-heading-lower">Step 1: Fetch and Merge Changes</span>
+            <span class="site-heading-lower">Avoid Rejected Push Requests</span>
         </h1>
     </header>
     <!-- Navigation-->
