notes about 'Avoid Rejected Push Requests'

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@ THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
 -->
 
 <!--LESSON 06 Step 3: Avoid Rejected Push Requests
+    this occur when we trying push some change in from local to
+    remote, but someone makes change in remote, so we need to pull before
+    the remote changes, and then push the local changes
     
 
 -->
