--- a/index.html
+++ b/index.html
@@ -134,4 +134,7 @@ THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
     the remote changes, and then push the local changes
     
 
+    Step 5: Pulling into Branch featureA
+    Is a good practice first pull from origin before push our local changes
+
 -->
