--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <span class="section-heading-upper">Feature A</span>
                         <span class="section-heading-lower">First Branch</span>
                     </h2>
-                    <p>Display Features</p>
+                    <p>Basic Display Features For Customers</p>
                     <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit Us Today!</a>
                     </div>
                 </div>
