adding notes to pulling featureB

--- a/index.html
+++ b/index.html
@@ -143,5 +143,12 @@ THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
 
     Step 5: Pulling into Branch featureA
     Is a good practice first pull from origin before push our local changes
+    THEN WHEN WE PULL, is needed to compare and resolve, then fix the code, then
+    >git add .
+    >git commit -m "..."
+    >git resolve --continue
+    >git push origin <branch>
+
+    Step 6: Pulling into Branch featureB
 
 -->
