--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
     <footer class="footer text-faded text-center py-5">
         <div class="container">
-            <p class="m-0 small">Copyright by Moisés Parra &copy; Your Website 2023</p>
+            <p>Git 2023</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
