--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
     <footer class="footer text-faded text-center py-5">
         <div class="container">
-            <p style="color:#fab11c" id="footertext">Git 2023 CHANGE01 CHANGE02 CHANGE03 change04 change05</p>
+            <p style="color:#fab11c" id="footertext">Git 2023 CHANGE01 CHANGE02 CHANGE03 change04 change05 CHANGE06</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
