--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="col-xl-9 mx-auto">
                     <div class="cta-inner bg-faded text-center rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">commit in feature 01</span>
+                            <span class="section-heading-upper">commit in feature 01 to master</span>
                             <span class="section-heading-lower">Status</span>
                         </h2>
                         <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you
