adding note about delete remote branches

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@ THIS CODE REMOVE THE LAST CHANGE UPDATED IN THE REPOSITORY
     remote, but someone makes change in remote, so we need to pull before
     the remote changes, and then push the local changes
     
-TO DELETE A BRANCH IS WIT:
+TO DELETE locally A BRANCH IS WIT:
 >git branch -d <name_branch>
+
+TO DELETE REMOTE BRANCHES
+>git push origin --delete <branch_name>
 -->
