--- a/index.html
+++ b/index.html
@@ -154,4 +154,23 @@ TO DELETE locally A BRANCH IS WIT:
 
 TO DELETE REMOTE BRANCHES
 >git push origin --delete <branch_name>
+
+TO DISPLAY ALL THE COMMITS IN AN EASY WAY OR IN A SINGLE LINE
+>git log --pretty=oneline
+
+TO SEE THE AUTHOR
+>git log --author=<name_author>
+
+TO SEE THE GIT GRAPH 
+>git log --graph --decorate --oneline
+
+TO LIMIT THE NUMBER OF COMMITS
+>git log -n <num of commits>
+
+TO SHOW ONE PARTICULAR COMMIT
+>git show <commit_number>
+
+TO SHOW DIFFERENCES BETWEEN TWO BRANCHES, EXAMPLE
+>git diff main featureA
+
 -->
